--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>java program</title>
+    <title>Document</title>
 </head>
 <body>
+    <h1>hii</h1>
+
+
+
+
+
+
+
+
+
     
-    <script src="/jul20_3.js"></script>
+    <script src="./js/work.js"></script>
 </body>
 </html>
